--- a/css/norment.css
+++ b/css/norment.css
@@ -131,8 +131,8 @@ body .fullscreen {
 }
 
 figure .large-image {
-  margin-top: -5.5vmin !important;
-  margin-left: -10vmin !important;
+  margin-top: -6vmin;
+  margin-left: -10vmin;
 }
 
 .hide-controls .controls {
@@ -509,9 +509,9 @@ body {
 }
 
 .reveal .progress span {
-  -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-  transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); 
+  -webkit-transition: transform 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); /* DR: was `: width 800ms ...` */
+  -moz-transition: transform 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); /* DR: was `: width 800ms ...` */
+  transition: transform 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); /* DR: was `: width 800ms ...` */
 }
 
 /*********************************************
